--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,7 @@ cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
 project(Deliberation C CXX)
 
 # Configuration options
-option(OPTION_BUILD_STATIC 	"Build static libraries" OFF)
 
-if(OPTION_BUILD_STATIC)
-   set(BUILD_SHARED_LIBS OFF)
-   message("Note: DELIBERATION_STATIC needs to be defined for static linking.")
-else()
-    set(BUILD_SHARED_LIBS ON)
-endif()
 
 # CMake configuration
 set(CMAKE_MODULE_PATH 			   ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
@@ -32,6 +25,15 @@ elseif(UNIX)
 else()
     message(WARNING "Unsupported platform/compiler combination")
 endif()
+
+# dependencies
+find_package(Bandit     REQUIRED)
+find_package(OpenGL     REQUIRED)
+find_package(glbinding  REQUIRED)
+find_package(GLM        REQUIRED)
+find_package(SDL2       REQUIRED)
+find_package(SDL2_ttf   REQUIRED)
+find_package(GLFW       REQUIRED)
 
 # Include projects
 add_subdirectory(Source)
