Add dynamic libs to DELIBERATION_LIBRARIES

--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -348,6 +348,9 @@ set(libs
 set(DELIBERATION_LIBRARIES
     Deliberation
     ${libs}
+    ${SDL2_LIBRARY}
+    ${SDL2TTF_LIBRARY}
+    ${OPENGL_gl_LIBRARY}
     CACHE INTERNAL ""
 )
 
