--- a/Source/Examples/CMakeLists.txt
+++ b/Source/Examples/CMakeLists.txt
@@ -66,6 +66,10 @@ target_link_libraries(BasicRenderTargetExample ${libs})
 add_executable(BasicSceneExample BasicSceneExample.cpp)
 target_link_libraries(BasicSceneExample ${libs})
 
+# BasicMeshExample
+add_executable(BasicMeshExample BasicMeshExample.cpp)
+target_link_libraries(BasicMeshExample ${libs})
+
 # PhysicsExample
 add_executable(PhysicsExample PhysicsExample.cpp)
 target_link_libraries(PhysicsExample ${libs})
