Mesh2 replaces Mesh

--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -182,8 +182,8 @@ set(sources
     ${source_path}/Scene/DebugGrid3DRenderer.cpp
     ${source_path}/Scene/DebugGroundPlaneRenderer.cpp
     ${source_path}/Scene/EdgeToFaceSmoothing.cpp
-    ${source_path}/Scene/Mesh2.cpp
-    ${source_path}/Scene/MeshCompiler2.cpp
+    ${source_path}/Scene/Mesh.cpp
+    ${source_path}/Scene/MeshCompiler.cpp
     ${source_path}/Scene/PostprocessingEffect.cpp
     ${source_path}/Scene/UVSphere.cpp
     ${source_path}/Scene/RenderNode.cpp
@@ -344,11 +344,7 @@ set(api_includes
     ${include_path}/Scene/DebugGroundPlaneRenderer.h
     ${include_path}/Scene/EdgeToFaceSmoothing.h
     ${include_path}/Scene/Mesh.h
-    ${include_path}/Scene/Mesh.inl
-    ${include_path}/Scene/Mesh2.h
-    ${include_path}/Scene/MeshCompiler2.h
     ${include_path}/Scene/MeshCompiler.h
-    ${include_path}/Scene/MeshCompiler.inl
     ${include_path}/Scene/PostprocessingEffect.h
     ${include_path}/Scene/UVSphere.h
     ${include_path}/Scene/RenderNode.h
