--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -161,8 +161,9 @@ set(sources
     ${source_path}/Font/Label.cpp
     ${source_path}/Font/LabelRenderer.cpp
 
+    ${source_path}/Physics/AABBCollisionShape.cpp
     ${source_path}/Physics/BoxCollisionShape.cpp
-    ${source_path}/Physics/BroadphaseBase.cpp
+    ${source_path}/Physics/Broadphase.cpp
     ${source_path}/Physics/OctreeBroadphase.cpp
     ${source_path}/Physics/BroadphaseProxy.cpp
     ${source_path}/Physics/CollisionShape.cpp
@@ -321,8 +322,9 @@ set(api_includes
     ${include_path}/Font/Label.h
     ${include_path}/Font/LabelRenderer.h
 
+    ${include_path}/Physics/AABBCollisionShape.h
     ${include_path}/Physics/BoxCollisionShape.h
-    ${include_path}/Physics/BroadphaseBase.h
+    ${include_path}/Physics/Broadphase.h
     ${include_path}/Physics/OctreeBroadphase.h
     ${include_path}/Physics/BroadphaseProxy.h
     ${include_path}/Physics/CollisionFilter.h
