--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,15 +13,15 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 # Setup platform specifics (compile flags, etc., ...)
 if(MSVC)
-    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PlatformWindowsMSVC.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/WindowsMSVC.cmake)
 elseif(WIN32 AND CMAKE_COMPILER_IS_GNUCXX)
-    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PlatformWindowsGCC.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/WindowsGCC.cmake)
 elseif(APPLE)
-    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PlatformMacOS.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/MacOS.cmake)
 elseif(UNIX AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PlatformLinuxClang.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/LinuxClang.cmake)
 elseif(UNIX)
-    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PlatformLinuxGCC.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/LinuxGCC.cmake)
 else()
     message(WARNING "Unsupported platform/compiler combination")
 endif()
@@ -30,6 +30,7 @@ endif()
 find_package(Bandit     REQUIRED)
 find_package(OpenGL     REQUIRED)
 find_package(glbinding  REQUIRED)
+find_package(cxxopts    REQUIRED)
 find_package(GLM        REQUIRED)
 find_package(SDL2       REQUIRED)
 find_package(SDL2_ttf   REQUIRED)
