--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -206,7 +206,9 @@ set(sources
     ${source_path}/Scene/UVSphere.cpp
     ${source_path}/Scene/RenderNode.cpp
     ${source_path}/Scene/RenderPipeline.cpp
-)
+
+    ${source_path}/Voxel/VoxelClusterMarchingCubes.cpp
+    ${source_path}/Voxel/VoxReader.cpp)
 
 # api_includes
 set(api_includes
@@ -384,7 +386,11 @@ set(api_includes
     ${include_path}/Scene/UVSphere.h
     ${include_path}/Scene/RenderNode.h
     ${include_path}/Scene/RenderPipeline.h
-)
+
+    ${include_path}/Voxel/VoxelCluster.h
+    ${include_path}/Voxel/VoxelCluster.inl
+    ${include_path}/Voxel/VoxelClusterMarchingCubes.h
+    ${include_path}/Voxel/VoxReader.h)
 
 # libs
 set(libs
